@@ -10,6 +10,7 @@ Version 0.3y
 * Fixed a bug that showed up on firefox where the game wouldn't load.
 * Fixed Terry's pregnancy getting reset on save/load.
 * Did some refactoring on the farm, removing the Loiter scene and cleaning up the intro a bit.
+* Layla added to farm (missing pics!). You need to defeat Orchid before you can meet her.
 
 --------------------------------------------
              PREVIOUS VERSIONS
